2011-12-09  David Levin  <levin@chromium.org>

        Hash* iterators should allow comparison between const and const versions.
        https://bugs.webkit.org/show_bug.cgi?id=73370

        Reviewed by Darin Adler.

        * wtf/HashTable.h: Add the operators needed to do this.
        (WTF::HashTableConstIterator::operator==):
        (WTF::HashTableConstIterator::operator!=):
        (WTF::HashTableIterator::operator==):
        (WTF::HashTableIterator::operator!=):
        (WTF::operator==):
        (WTF::operator!=):

2011-12-09  Michael Saboff  <msaboff@apple.com>

        YARR: Multi-character read optimization for 8bit strings
        https://bugs.webkit.org/show_bug.cgi?id=74191

        Reviewed by Oliver Hunt.

        Changed generatePatternCharacterOnce to generate
        code for 1 to 4 characters in the 8 bit case.
        This is worth 29% improvement on SunSpider regexp-dna test.
        It provides no benefit to v8-regexp.

        * yarr/YarrJIT.cpp:
        (JSC::Yarr::YarrGenerator::generatePatternCharacterOnce):
        (JSC::Yarr::YarrGenerator::generate): Spelling fix in comment.

2011-12-09  David Levin  <levin@chromium.org>

        Regression(r53595): Sync xhr requests in workers aren't terminated on worker close.
        https://bugs.webkit.org/show_bug.cgi?id=71695

        Reviewed by Zoltan Herczeg.

        * wtf/MessageQueue.h:
        (WTF::MessageQueue::tryGetMessageIgnoringKilled): Added a way to get messages
        even after the queue has been killed. This is useful when one wants to
        kill a queue but then go through it to run clean up tasks from it.

2011-12-09  Adrienne Walker  <enne@google.com>

        Fix HashMap<..., OwnPtr<...> >::add compilation errors
        https://bugs.webkit.org/show_bug.cgi?id=74159

        Reviewed by Darin Adler.

        Add a constructor to OwnPtr that takes the empty value (nullptr_t)
        from HashTraits so that this function can compile.

        * wtf/OwnPtr.h: